--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.35",
     "@types/passport": "^1.0.7",
-    "@types/passport-jwt": "^3.0.6"
+    "@types/passport-jwt": "^3.0.6",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3"
   },
   "dependencies": {
     "compression": "^1.7.4",
@@ -37,6 +39,8 @@
     "passport-jwt": "^4.0.0",
     "pm2": "^5.2.0",
     "speedy-ts-compiler": "^0.0.1-security",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0",
     "winston": "^3.7.2",
     "xss-clean": "^0.1.1"
   }
